Hookup i'm a developer button
Auditors: @bridiver

--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                  <Strong>Join Brave and make it our Internet.</Strong>
             </span>
 
-            <a class="btn-u btn-u-black ls-s-1 lean-more-button" href="#about" style=" 
+            <a class="btn-u btn-u-black ls-s-1 scroll-button" href="#about" style=" 
                                         padding: 8px 18px; 
                                         font-size:18px; 
                                         top:440px; 
@@ -243,8 +243,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                         durationin : 2000; 
                                         durationout : 2000; ">
                 Learn More</a>
-
-                      <a class="btn-u btn-u-black ls-s-1" data-toggle="modal" data-target="#mailchimpModal" href="#" style="
+            <a class="btn-u btn-u-black ls-s-1" data-toggle="modal" data-target="#mailchimpModal" href="#" style="
                                         padding: 8px 18px;
                                         font-size:18px;
                                         top:440px;
@@ -254,8 +253,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                         durationin : 2000;
                                         durationout : 2000; ">
                 sign up for beta</a>
-                     
-                                           <a class="btn-u btn-u-black ls-s-1" href="#contact" style=" 
+            <a class="btn-u btn-u-black ls-s-1 scroll-button" href="#devs" style=" 
                                         padding: 8px 18px; 
                                         font-size:18px;     
                                         top:440px; 
