add content text to mailchimp form modal

--- a/public/index.html
+++ b/public/index.html
@@ -812,7 +812,7 @@ Thus we are a browser-based ad-tech platform, with high precision and privacy. W
             <h4 class="modal-title" id="myModalLabel">Be the First to Join Brave</h4>
           </div>
           <div class="modal-body">
-            <p>You are now in the queue for Brave! We'll email you when the desktop version is ready for you.</p>
+            <p>You are now in the queue for Brave! We'll email you when the desktop version is ready for you. Sign up for Brave on iOS and Android below:</p>
             <!-- Begin MailChimp Signup Form -->
             <link href="https://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
             <style type="text/css">
