Normalize the spacing between sections a bit more

--- a/public/index.html
+++ b/public/index.html
@@ -344,7 +344,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             </div>
 
             <div class="row">
-                <div class="col-md-6 content-boxes-v3 margin-bottom-40">
+                <div class="col-md-6 content-boxes-v3">
                     <div class="clearfix margin-bottom-30">
                         <i class="icon-custom icon-md rounded-x icon-bg-orange fa fa-warning"></i>
                         <div class="content-boxes-in-v3">
