new copy for BE post and various corrections.
had to postpone the footer redesign…

--- a/public/index.html
+++ b/public/index.html
@@ -322,13 +322,13 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="container">
                 <div class="title-v1">
                    <BR><h1>It's amazing how fast a page loads when you strip away <BR>everything but the real content. </h1>
-                    <p>Up to a whopping 60% of page load time is caused by the underlying and invisible ad technology that loads <BR>into various places each time you hit a page on your favorite news site.<BR> And 20% of this is time spent on loading things that are trying to learn more about you.  <br>
+                    <p>Up to a whopping 60% of page load time is caused by the underlying ad technology that loads <BR>into various places each time you hit a page on your favorite news site.<BR> And 20% of this is time spent on loading things that are trying to learn more about you.  <br>
                    </p>
                 </div>
                 <div class="title-v1 img-center ">
                     <p>Example news page data and load time with tracking allowed and normal ads allowed.</p>
                     <img class="img-responsive" src="assets/img/bg/pageload_graph.png" alt="">
-                    <p>Same page data and load time with tracking <strong>blocked</strong> and notmal ads <strong>blocked.</strong></p>
+                    <p>Same page data and load time with tracking <strong>blocked</strong> and normal ads <strong>blocked.</strong></p>
                 </div>
             </div>
         </div>
@@ -384,15 +384,15 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="container content-md">
                   <div class="title-v1">
                     <p><h1>Brave is open-source! </p>Join us on GitHub and contribute to the Brave Repos <BR>as we build the web of the future. </h1>
-                    <p>We beleive in an open source community. It’s our Web and we want to fix it as a team. Everything from our backend to the frontend is open. We are progressing at a high rate of speed so expect to see new commits on an hourly basis.<br><BR>
+                    <p>We believe in an open source community. It’s our Web and we want to fix it as a team. Everything from our backend to the frontend is open. We are progressing at a high rate of speed so expect to see new commits on an hourly basis.<br><BR>
                    </p>
     
                       
 
 
-            <div class="row content-boxes-v2 margin-bottom-40 service-block-v5">
+            <div class="row content-boxes-v2 margin-bottom-40">
                 <div class="col-sm-4 sm-margin-bottom-40 ">
-                    <i class="icon-rounded icon-lg icon-bg-dark fa fa-github"></i>
+                    <i class="icon-custom icon-lg icon-bg-dark fa fa-github"></i>
                     <h2 class="heading-sm">
                         <span>Brave for iOS</span>
                     </h2>
@@ -640,35 +640,39 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <li>Posted January 20, 2016</li>
                     </ul>
                     <h2><a href="#">How to Fix the Web</a></h2>
-                    <p>The Web is always in trouble for some reason or other. I remember when Microsoft came after Netscape and threatened to lock Web standards into IE, and even into 1990s-era Windows-only software (Active X). Only the Web is so big, with such reach to billions of users, that no one owns it. This means it will be contested ground.</p>
+                    <p>The Web is always in trouble for some reason or other. I remember when Microsoft came after Netscape and threatened to lock Web standards into IE. Only the Web is so big, with such reach to billions of users, that no one owns it. This means it will always be contested ground.</p>
 <p>
-But the threat today, since we took back browser share from IE with Firefox in 2004 and paved the way for the modern Web of healthier browser markets and web standards, faces a primal threat. What is this threat?</p>
-<p>
-Some say the threat to the Web is “mobile”, but webviews are commonplace in apps, and no publisher of note is about to replace its primary website with a walled-garden equivalent. Nor can most websites hope to develop their own apps and convert their browser users to app-only users.</p>
-<p>
-I contend that the threat we face is ancient and, at bottom, human, social. Some call it advertising, others privacy. I view it as Principal-Agent conflict of interest woven into the fabric of the Web.</p>
-<p>
+But the Web today faces a primal threat.</p>
+ <p>
+Some say the threat to the Web is “mobile”, but the Web is co-evolving with smartphones, not going away. Webviews are commonplace in apps, and no publisher of note is about to replace its primary website with a walled-garden equivalent. Nor can most websites hope to develop their own apps and convert their browser users to app-only users.</p>
+ <p>
+I contend that the threat we face is ancient and, at bottom, human. Some call it advertising, others privacy. I view it as the Principal-Agent conflict of interest woven into the fabric of the Web.</p>
+ <p>
 You use a browser to find and contribute information, but you generally do not pay for the websites who host that information. Across billions of people, for most sites in most countries, it isn’t realistic to expect anything but a free Web. And as Ben Thompson points out, “free” means ad-supported in the main. Yes, successful sites and apps may convert you to a paying customer, but most won’t.</p>
-<p>
-You might object: “Hey, I’m ready to pay for websites I support”. I’m with you, but many people are not so well-off that they can support most of the commercial sites they use. Also, the Web missed an opportunity to define payments and all they entail as a standard.</p>
+ <p>
+You might object: “Hey, I’m ready to pay for websites I support”. I’m with you, but many people are not so well-off that they can support most of the commercial sites they use. Also, the Web missed an opportunity back in the early days to define payments and all they entail as a standard.</p>
 <p>
 Once you grant this premise, that the Web needs ads in the large, it follows that your browsing habits will be surveilled, to the best of the ad ecosystem players’ abilities. Also, depending on how poorly ads are designed and integrated, you may become blind or averse to them. Since the ‘90s, I’ve seen several races to the bottom along these lines.</p>
 <p>
 The Principal (you) uses a browser (one of a layer of agents, both software and humans) to browse the Web and keep its lights on. Consider your primary agent, the browser. It’s a complex piece of code, but now thanks to Mozilla, WebKit, Chromium, and even in part Microsoft, this billion-dollar investment is available as a mix of free and open source software.</p>
 <p>
-Yet thanks to tracking options that are inevitable with anything like the Web, your valuable and private user behavior and browsing intent signals can be extracted via your browser. And that may not be a fair deal.</p>
-<p>
-Also, consider who makes the top three browsers: Google, Microsoft, and Apple. Of the three, Apple has the least interest in ad-dependent businesses, so it is not surprising that iOS 9 supports ad blockers.</p>
+Yet thanks to tracking options that are inevitable with anything like the Web, your valuable and private user behavior and browsing intent signals can be extracted via your current browser. And that may not be a fair deal.</p>
 <p>
 Everyone’s talking about ad blocking. Blockers can make the user experience of the Web much better. But as Marco Arment noted, they don’t feel good to many folks. They feel like free-riding, or even starting a war. You may never click on an ad, but even forming an impression from a viewable ad has some small value. With enough people blocking ads, the Web’s main funding model is in jeopardy.</p>
 <p>
-At Brave, we’re building something designed to avert war and give users the fair deal they deserve for coming to the Web to browse and contribute. We are building a new browser and a connected private cloud service with anonymous ads.</p>
+At Brave, we’re building a solution designed to avert war and give users the fair deal they deserve for coming to the Web to browse and contribute. We are building a new browser and a connected private cloud service with anonymous ads. Today we’re releasing the 0.7 developer version for early adopters and testers, along with open source and our roadmap.</p>
 <p>
-Brave browsers block everything: initial signaling/analytics scripts that start the programmatic advertising “dirty pipe”, impression-tracking pixels, and ad-click confirmation signals. By default Brave will insert ads only in a few standard-sized spaces. We find those spaces via a cloud robot (so users don't have to suffer, even a few canaries per screen size profile, with ad delays and battery draining). We target ads based on browser-side intent signals phrased in a standard vocabulary, and without a persistent user id or highly re-identifiable cookie.</p>
+Brave browsers block everything: initial signaling/analytics scripts that start the programmatic advertising “dirty pipe”, impression-tracking pixels, and ad-click confirmation signals. By default Brave will insert ads only in a few standard-sized spaces. We find those spaces via a cloud robot (so users don't have to suffer, even a few canaries per screen size-profile, with ad delays and battery draining). We will target ads based on browser-side intent signals phrased in a standard vocabulary, and without a persistent user id or highly re-identifiable cookie.</p>
 <p>
 The browser sees everything you do, including actions to stop that annoying phenomenon of retargeting where an ad chases you around the Web, often for something you just bought or decided not to buy. We keep user data out of our cloud Brave Vault by default. It’s better for you and us that we don’t store any of your data without your permission.</p>
 <p>
-Thus we are a browser-based ad-tech platform, with high precision and privacy. What’s more, we aim to solve the Principal-Agent problem wherever it arises. Brave is the only approach to the Web that puts users first in ownership and control of their browsing data. The same could apply to other kinds of data, and with your help, we hope to grow big enough to serve users above all others.</p>
+Thus we are a browser-based ad-tech platform, with high precision and privacy. What’s more, we aim to solve the Principal-Agent problem wherever it arises. Brave is the only approach to the Web that puts users first in ownership and control of their browsing data by blocking trackers by default, with no exceptions. The same could apply to other kinds of data, and with your help, we hope to grow big enough to serve users’ interests above all others’.</p>
+<p>
+In evolving systems like the Web, many players get stuck optimizing locally, no matter how much they think globally. Ad blockers may hope for better ads, but so far they seem to be having little effect. Publishers trying ad-blocker blockers may get a few local wins, but that path is an arms race. Brave brings innovation to bear across the whole Web system.</p>
+<p>
+<strong>Join us. With your help, we can fix the Web.</p></strong>
+
+
 
                 </div>
             </div>
@@ -680,7 +684,7 @@ Thus we are a browser-based ad-tech platform, with high precision and privacy. W
 
 
 
-  <!--=== Footer v5 ===-->
+<!--=== Footer v5 ===-->
 <section id="contact">
     <div id="footer-v5" class="footer-v5">
         <div class="footer">
@@ -712,6 +716,7 @@ Thus we are a browser-based ad-tech platform, with high precision and privacy. W
 <!--                            </ul></div>-->
                     </div>
                     <!-- End About Us -->
+
 
                     <!-- Recent News -->
                     <div class="col-md-3 sm-margin-bottom-40">
