s/elite/seasoned, per brad's suggestion

--- a/public/index.html
+++ b/public/index.html
@@ -457,7 +457,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="container">
                 <div class="title-v1">
                     <h2>Introducing the secret sauce...</h2>
-                    <p>An elite set of experts in their field, with the passion to save the web. </p>
+                    <p>A seasoned set of experts in their field, with the passion to save the web. </p>
                 </div>
 
                 <ul class="list-unstyled row">
