Note that browser-laptop theoretically supports linux

--- a/public/index.html
+++ b/public/index.html
@@ -401,7 +401,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="col-md-4 sm-margin-bottom-40 ">
                     <i class="icon-custom  icon-lg icon-bg-dark fa fa-github"></i>
                     <h2 class="heading-sm">
-                        <span>Brave for Brave for OS X / Windows</span>
+                        <span>Brave for OS X / Windows / Linux</span>
                     </h2>
                      <p>GitHub Repo: <BR><a href="https://github.com/brave/browser-laptop">https://github.com/brave/browser-laptop</a></p>
                 </div>
