Grammar improvements to OSS section

--- a/public/index.html
+++ b/public/index.html
@@ -383,8 +383,8 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="container">
             <div class="container content-md">
                   <div class="title-v1">
-                    <p><h1>Brave is open-source! </p>Join us on GitHub and contribute to the Brave Repos <BR>as we build the web of the future. </h1>
-                    <p>We believe in an open source community. It’s our Web and we want to fix it as a team. Everything from our backend to the frontend is open. We are progressing at a high rate of speed so expect to see new commits on an hourly basis.<br><BR>
+                    <p><h1>Brave is open source! </p>Join us on GitHub and contribute to Brave <BR>as we build the web of the future. </h1>
+                    <p>We believe in having an open source community. It’s our web and we want to fix it as a team, so everything from our backend to the frontend is open. We are progressing quickly so expect to see new commits on an hourly basis.<br><BR>
                    </p>
     
                       
