Add placeholder for ToS and privacy policy

--- a/public/index.html
+++ b/public/index.html
@@ -766,8 +766,8 @@ In evolving systems like the Web, many players get stuck optimizing locally, no 
         <div class="container">
             <ul class="list-inline terms-menu">
                 <li class="silver"> © 2016 Brave Software Inc. All Rights Reserved. </li>
-                <li><a href="#">Terms of Use</a></li>
-                <li><a href="#">Privacy and Policy</a></li>
+                <li><a href="javascript:alert('Coming later today!')">Terms of Use</a></li>
+                <li><a href="javascript:alert('Coming later today!')">Privacy and Policy</a></li>
 <!--
                 <li><a href="#">License</a></li>
                 <li><a href="#">Support</a></li>
