--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <!--=== Header ===-->
     <nav class="one-page-header navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
-            <div class="menu-container page-scroll">
+            <div class="menu-container">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -79,30 +79,30 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div id="fullsize-menu" class="collapse navbar-collapse navbar-ex1-collapse">
                 <div class="menu-container">
                     <ul class="nav navbar-nav">
-                        <li class="page-scroll home">
+                        <li class="home">
                             <a href="#body">Introducing Brave</a>
                         </li>
-                        <li class="page-scroll">
+                        <li>
                             <a href="#faster">Faster</a>
                         </li>
-                        <li class="page-scroll">
+                        <li>
                             <a href="#safer">Safer</a>
                         </li>
 
-                         <li class="page-scroll">
+                         <li>
                             <a href="#devs">Developers</a>
                         </li>
                         
-                        <li class="page-scroll">
+                        <li>
                             <a href="#team">Team</a>
 
                         </li>
-                          <li class="page-scroll">
+                          <li>
                             <a href="#about">About</a>
 
                         </li>
 
-                        <li class="page-scroll">
+                        <li>
                             <a href="#contact">Contact</a>
                         </li>
 
@@ -233,7 +233,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                  <Strong>Join Brave and make it our Internet.</Strong>
             </span>
 
-            <a class="btn-u btn-u-black ls-s-1 scroll-button" href="#about" style=" 
+            <a class="btn-u btn-u-black ls-s-1" href="#about" style=" 
                                         padding: 8px 18px; 
                                         font-size:18px; 
                                         top:440px; 
@@ -253,7 +253,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                         durationin : 2000;
                                         durationout : 2000; ">
                 sign up for beta</a>
-            <a class="btn-u btn-u-black ls-s-1 scroll-button" href="#devs" style=" 
+            <a class="btn-u btn-u-black ls-s-1" href="#devs" style=" 
                                         padding: 8px 18px; 
                                         font-size:18px;     
                                         top:440px; 
@@ -845,7 +845,6 @@ In evolving systems like the Web, many players get stuck optimizing locally, no 
     <script src="assets/plugins/jquery/jquery-migrate.min.js"></script>
     <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <!-- JS Implementing Plugins -->
-    <script src="assets/plugins/smoothScroll.js"></script>
     <script src="assets/plugins/jquery.easing.min.js"></script>
     <script src="assets/plugins/pace/pace.min.js"></script>
     <script src="assets/plugins/jquery.parallax.js"></script>
