--- a/public/index.html
+++ b/public/index.html
@@ -735,25 +735,8 @@ In evolving systems like the Web, many players get stuck optimizing locally, no 
                     <!-- End Recent Blog Entries -->
 
                     <div class="col-md-3">
-                        <div class="heading-footer"><h2>Stay in Touch</h2></div>
                         
 
-                                            <!-- Begin MailChimp Signup Form -->
-                <div id="mailchimp-form">
-                <form action="//brave.us11.list-manage.com/subscribe/post?u=bc970601c83256047af4b8359&amp;id=cb26574db7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll">
-                <div class="mc-field-group">
-                    <p>Keep me in the loop...</p>
-                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address">
-                    <BR><BR><input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button subscribe btn-u btn-u-black ls-s-1">
-                </div>
-                    <div id="mce-responses" class="clear">
-                        <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"></div>
-                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_bc970601c83256047af4b8359_cb26574db7" tabindex="-1" value=""></div>
-                    </div>
-                </form>
                 </div>
                 <!--End MailChimp Signup Form-->
                     </div>
@@ -789,12 +772,7 @@ In evolving systems like the Web, many players get stuck optimizing locally, no 
                 <div class="modal-body">
                     <p>We'll email you when the desktop version is ready for you. Sign up on iOS and Android below:</p>
                     <!-- Begin MailChimp Signup Form -->
-                    <link href="https://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-                        <style type="text/css">
-                            #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-                            /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-                             We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-                        </style>
+                    <link href="https://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css" />
                         <div id="mc_embed_signup">
                             <form action="https://brave.us11.list-manage.com/subscribe/post?u=bc970601c83256047af4b8359&amp;id=97bba1652f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
                                 <div id="mc_embed_signup_scroll">
@@ -837,6 +815,8 @@ In evolving systems like the Web, many players get stuck optimizing locally, no 
             </div>
         </div>
     </div>
+
+
 
     <!-- JS Global Compulsory -->
     <script src="assets/plugins/jquery/jquery.min.js"></script>
