--- a/public/index.html
+++ b/public/index.html
@@ -787,6 +787,9 @@ In evolving systems like the Web, many players get stuck optimizing locally, no 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
                     <h4 class="modal-title" id="myModalLabel">Be the First to Join Brave</h4>
+                </div>
+                <div class="modal-body">
+                    <p>You are now in the queue for Brave! We have a long waitlist but will send you a link to download as soon as we can.</p>
                     <script type="text/javascript" src="https://form.jotform.com/jsform/60194867956169"></script>
                 </div>
                 <script type="text/javascript" src="https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[3]='ANDROID';ftypes[3]='radio';fnames[2]='IOS';ftypes[2]='radio';fnames[4]='OSX';ftypes[4]='radio';fnames[5]='WINDOWS';ftypes[5]='radio';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
