--- a/public/index.html
+++ b/public/index.html
@@ -738,26 +738,28 @@ In evolving systems like the Web, many players get stuck optimizing locally, no 
 
                     <div class="col-md-3">
                         
-<!--                         <div class="heading-footer"><h2>Stay in Touch</h2></div>
+                         <div class="heading-footer"><h2>Stay in Touch</h2></div>
 
 
-                        <div id="mailchimp-form">
-                            <form action="//brave.us11.list-manage.com/subscribe/post?u=bc970601c83256047af4b8359&amp;id=cb26574db7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                                <div id="mc_embed_signup_scroll">
-                                    <div class="mc-field-group">
+                        <!-- <div id="mailchimp-form"> -->
+                            <!-- <form action="//brave.us11.list-manage.com/subscribe/post?u=bc970601c83256047af4b8359&amp;id=cb26574db7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> -->
+                                <!-- <div id="mc_embed_signup_scroll"> -->
+                                    <!-- <div class="mc-field-group"> -->
                                         <p>Keep me in the loop...</p>
-                                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address">
-                                            <BR><BR><input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button subscribe btn-u btn-u-black ls-s-1">
-                                                </div>
-                                    <div id="mce-responses" class="clear">
+                                        <script type="text/javascript" src="https://form.jotform.com/jsform/60195600795156"></script>
+
+                                        <!-- <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address">
+                                            <BR><BR><input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button subscribe btn-u btn-u-black ls-s-1"> -->
+                                                <!-- </div> -->
+                                    <!-- <div id="mce-responses" class="clear">
                                         <div class="response" id="mce-error-response" style="display:none"></div>
                                         <div class="response" id="mce-success-response" style="display:none"></div>
-                                    </div>    
-                                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_bc970601c83256047af4b8359_cb26574db7" tabindex="-1" value=""></div>
-                                </div>
-                            </form>
-                        </div>
- -->
+                                    </div>  -->   
+                                    <!-- <div style="position: absolute; left: -5000px;"><input type="text" name="b_bc970601c83256047af4b8359_cb26574db7" tabindex="-1" value=""></div> -->
+                                <!-- </div> -->
+                            <!-- </form> -->
+                        <!-- </div> -->
+ 
                     </div>
                 </div>
             </div><!--/container -->
@@ -786,14 +788,12 @@ In evolving systems like the Web, many players get stuck optimizing locally, no 
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Be the First to Join Brave</h4>
+                    <h4 class="modal-title" id="myModalLabel">Join Us on Brave</h4>
                 </div>
                 <div class="modal-body">
                     <p style="margin: 0;padding: 0;">You are now in the queue for Brave! We have a waitlist but will send you a download link soon.</p>
                     <script type="text/javascript" src="https://form.jotform.com/jsform/60194867956169"></script>
                 </div>
-                <script type="text/javascript" src="https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script><script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[3]='ANDROID';ftypes[3]='radio';fnames[2]='IOS';ftypes[2]='radio';fnames[4]='OSX';ftypes[4]='radio';fnames[5]='WINDOWS';ftypes[5]='radio';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-                <!--End mc_embed_signup-->
             </div>
         </div>
     </div>
