fix remaining html linter errors

--- a/public/index.html
+++ b/public/index.html
@@ -193,7 +193,6 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                          durationin : 3000; durationout : 20000; ">
         <iframe width="410" height="220" src="https://www.youtube-nocookie.com/embed/kHWf6hRV-GM?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
     </div>
-</div>
 
                 </div>
             </div>
@@ -385,7 +384,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="container">
             <div class="container content-md">
                   <div class="title-v1">
-                    <p><h1>Brave is open source! </p>Join us on GitHub and contribute to Brave <BR>as we build the web of the future. </h1>
+                    <h1>Brave is open source! <br>Join us on GitHub and contribute to Brave <BR>as we build the web of the future. </h1>
                     <p>We believe in having an open source community. It’s our web and we want to fix it as a team, so everything from our backend to the frontend is open. We are progressing quickly so expect to see new commits on an hourly basis.<br><BR>
                    </p>
     
@@ -642,7 +641,8 @@ Thus we are a browser-based ad-tech platform, with high precision and privacy. W
 <p>
 In evolving systems like the Web, many players get stuck optimizing locally, no matter how much they think globally. Ad blockers may hope for better ads, but so far they seem to be having little effect. Publishers trying ad-blocker blockers may get a few local wins, but that path is an arms race. Brave brings innovation to bear across the whole Web system.</p>
 <p>
-<strong>Join us. With your help, we can fix the Web.</p></strong>
+<strong>Join us. With your help, we can fix the Web.</strong>
+</p>
 
 
 
