--- a/public/index.html
+++ b/public/index.html
@@ -738,27 +738,10 @@ In evolving systems like the Web, many players get stuck optimizing locally, no 
 
                     <div class="col-md-3">
                         
-                         <div class="heading-footer"><h2>Stay in Touch</h2></div>
+                        <!--<div class="heading-footer"><h2>Stay in Touch</h2></div>
 
-
-                        <!-- <div id="mailchimp-form"> -->
-                            <!-- <form action="//brave.us11.list-manage.com/subscribe/post?u=bc970601c83256047af4b8359&amp;id=cb26574db7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> -->
-                                <!-- <div id="mc_embed_signup_scroll"> -->
-                                    <!-- <div class="mc-field-group"> -->
-                                        <p>Keep me in the loop...</p>
-                                        <script type="text/javascript" src="https://form.jotform.com/jsform/60195600795156"></script>
-
-                                        <!-- <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address">
-                                            <BR><BR><input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button subscribe btn-u btn-u-black ls-s-1"> -->
-                                                <!-- </div> -->
-                                    <!-- <div id="mce-responses" class="clear">
-                                        <div class="response" id="mce-error-response" style="display:none"></div>
-                                        <div class="response" id="mce-success-response" style="display:none"></div>
-                                    </div>  -->   
-                                    <!-- <div style="position: absolute; left: -5000px;"><input type="text" name="b_bc970601c83256047af4b8359_cb26574db7" tabindex="-1" value=""></div> -->
-                                <!-- </div> -->
-                            <!-- </form> -->
-                        <!-- </div> -->
+                        <p>Keep me in the loop...</p>
+                        -->
  
                     </div>
                 </div>
