jotform subscription form for footer

--- a/public/index.html
+++ b/public/index.html
@@ -738,10 +738,10 @@ In evolving systems like the Web, many players get stuck optimizing locally, no 
 
                     <div class="col-md-3">
                         
-                        <!--<div class="heading-footer"><h2>Stay in Touch</h2></div>
+                        <div class="heading-footer"><h2>Stay in Touch</h2></div>
 
                         <p>Keep me in the loop...</p>
-                        -->
+                        <script type="text/javascript" src="https://form.jotform.com/jsform/60195600795156"></script>
  
                     </div>
                 </div>
