--- a/public/index.html
+++ b/public/index.html
@@ -125,8 +125,6 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div id="layerslidermobile" style="width: 100%; height: 1300px; margin: 0px auto;">
                 <div class="ls-slide mobile-width-slide">
 
-                    <img src="assets/img/sliders/revolution/surfers_bluewash_tan_tall.jpg" class="ls-bg" alt="Slide background">
-
                     <span class="ls-s-1" style="color: #ffffff;
                                                 line-height:65px;
                                                 font-weight: 300;
@@ -196,11 +194,10 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </div>
             </div>
 <!--=== Slider ===-->
-                     <div id="layerslider" style="width: 100%; height: 540px; margin: 0px auto;">
+                     <div id="layerslider" style="width: 100%; height: 540px; margin: 0px auto; background-color:#4F6288">
        
                  <!--First Slide-->
             <div class="ls-slide" style="slidedirection: right; transition2d: 5; ">
-            <img src="assets/img/sliders/revolution/surfers_bluewash_tan.jpg" class="ls-bg" alt="Slide background">
 
             <span class="ls-s-1" style="color: #efefef; 
                                         line-height: 45px; 
