--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
             <!-- mobile slide alternative -->
-            <div id="layerslidermobile" style="width: 100%; height: 1300px; margin: 0px auto;">
+            <div id="layerslidermobile" style="width: 100%; height: 1300px; margin: 0px auto; background-color:#4F6288">
                 <div class="ls-slide mobile-width-slide">
 
                     <span class="ls-s-1" style="color: #ffffff;
