footer jotform debugging

--- a/public/index.html
+++ b/public/index.html
@@ -720,6 +720,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             Support: <a href="mailto:support@brave.com" >support@brave.com</a><BR>
                             Twitter: <a href="https://twitter.com/brave" target="_blank">twitter.com/brave</a>
                         </address>
+
+                        <h5>Stay In Touch</h5>
+                        <script type="text/javascript" src="https://form.jotform.com/jsform/60195600795156"></script>
                     </div>
                               
                     
@@ -782,7 +785,6 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <h4 class="modal-title" id="myModalLabel">Join Us on Brave</h4>
                 </div>
                 <div class="modal-body">
-                    <p style="margin: 0;padding: 0;">You are now in the queue for Brave! We have a waitlist but will send you a download link soon.</p>
                     <script type="text/javascript" src="https://form.jotform.com/jsform/60194867956169"></script>
                 </div>
             </div>
