--- a/public/index.html
+++ b/public/index.html
@@ -69,12 +69,6 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 </button>
 
 
-                             <!-- Logo -->
-<a class="logo" href="index.html">
-             <img src="assets/img/brave_logo_big2.png" alt="Logo">
-            </a>
-<!-- End Logo -->
-
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="fullsize-menu" class="collapse navbar-collapse navbar-ex1-collapse">
@@ -124,6 +118,8 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <!-- mobile slide alternative -->
             <div id="layerslidermobile" style="width: 100%; height: 1300px; margin: 0px auto; background-color:#4F6288">
                 <div class="ls-slide mobile-width-slide">
+
+                    <img class="ls-s-1" style="top:10px; left:80px" id="logo" src="assets/img/brave_logo_big2.png" alt="Logo">
 
                     <span class="ls-s-1" style="color: #ffffff;
                                                 line-height:65px;
@@ -198,6 +194,8 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
        
                  <!--First Slide-->
             <div class="ls-slide" style="slidedirection: right; transition2d: 5; ">
+
+            <img class="ls-s-1" style="top:60px; left:50px" id="logo" src="assets/img/brave_logo_big2.png" alt="Logo">
 
             <span class="ls-s-1" style="color: #efefef; 
                                         line-height: 45px; 
@@ -851,17 +849,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 //            OwlCarousel.initOwlCarousel();
 //                gridContainer.cubeportfolio();
                 LayerSlider.initLayerSlider();
-            if (window.location.hash && window.location.hash !== '#body') {
-                jQuery('.logo').hide();
-            }
         });
-        window.onhashchange = function() {
-            if (window.location.hash && window.location.hash !== '#body') {
-                jQuery('.logo').hide();
-            } else {
-                jQuery('.logo').show();
-            }
-        }
     </script>
     <!--[if lt IE 9]>
         <script src="assets/plugins/respond.js"></script>
