--- a/public/index.html
+++ b/public/index.html
@@ -195,9 +195,10 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             </div>
 <!--=== Slider ===-->
                      <div id="layerslider" style="width: 100%; height: 540px; margin: 0px auto; background-color:#4F6288">
-       
+
                  <!--First Slide-->
             <div class="ls-slide" style="slidedirection: right; transition2d: 5; ">
+            <img src="assets/img/sliders/revolution/surfers_bluewash_tan.jpg" class="ls-bg" alt="Slide background">
 
             <span class="ls-s-1" style="color: #efefef; 
                                         line-height: 45px; 
