Don't reload page when logo is clicked

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
                              <!-- Logo -->
-<a class="logo" href="index.html">
+<a class="logo" href="#">
              <img src="assets/img/brave_logo_big2.png" alt="Logo">
             </a>
 <!-- End Logo -->
