Make logo padding relative for low-width mode

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                              <!-- Logo -->
 <a class="logo" href="#">
-             <img id="brave-logo" src="assets/img/brave_logo_big2.png" alt="Logo" style="float: left; padding-left:120px">
+             <img id="brave-logo" src="assets/img/brave_logo_big2.png" alt="Logo" style="float: left; padding-left:10%">
             </a>
 <!-- End Logo -->
 
