--- a/public/index.html
+++ b/public/index.html
@@ -710,7 +710,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <!-- End Link List -->
 
                     <!-- Address -->
-                    <div class="col-md-3 map-img md-margin-bottom-40">
+                    <div id="contact" class="col-md-3 map-img md-margin-bottom-40">
                         <div class="headline"><h2>Contact Us</h2></div>
                         <address class="md-margin-bottom-40">
                             1161 Mission St. STE 113<BR>
