--- a/public/index.html
+++ b/public/index.html
@@ -651,6 +651,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <!-- End About Section -->
 
  <!--=== Footer v1 ===-->
+ <section id="contact">
     <div id="footer-v1" class="footer-v1">
         <div class="footer">
             <div class="container">
@@ -710,7 +711,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <!-- End Link List -->
 
                     <!-- Address -->
-                    <div id="contact" class="col-md-3 map-img md-margin-bottom-40">
+                    <div class="col-md-3 map-img md-margin-bottom-40">
                         <div class="headline"><h2>Contact Us</h2></div>
                         <address class="md-margin-bottom-40">
                             1161 Mission St. STE 113<BR>
@@ -772,7 +773,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         </div><!--/copyright-->
     </div>
     <!--=== End Footer v1 ===-->
-
+<section>
 
 
     <!-- Jotform Subscription Bootstrap Modal -->
