--- a/public/termsofuse.html
+++ b/public/termsofuse.html
@@ -80,31 +80,31 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div id="fullsize-menu" class="collapse navbar-collapse navbar-ex1-collapse">
                 <div class="menu-container">
                     <ul class="nav navbar-nav" style="position:absolute; bottom:0px; right:40px">
-                        <li class="home">
-                            <a href="#body">Introducing Brave</a>
+                     <li class="home">
+                            <a href="index.html">Introducing Brave</a>
                         </li>
                         <li>
-                            <a href="#faster">Faster</a>
+                            <a href="index.html#faster">Faster</a>
                         </li>
                         <li>
-                            <a href="#safer">Safer</a>
+                            <a href="index.html#safer">Safer</a>
                         </li>
 
                          <li>
-                            <a href="#devs">Developers</a>
+                            <a href="index.html#devs">Developers</a>
                         </li>
                         
                         <li>
-                            <a href="#team">Team</a>
+                            <a href="index.html#team">Team</a>
 
                         </li>
                           <li>
-                            <a href="#about">About</a>
+                            <a href="index.html#about">About</a>
 
                         </li>
 
                         <li>
-                            <a href="#contact">Contact</a>
+                            <a href="index.html#contact">Contact</a>
                         </li>
 
 
