Fix capitalization in banner

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
                              <!-- Logo -->
-<a class="logo" href="#">
+<a class="logo" href="index.html">
              <img id="brave-logo" src="assets/img/brave_logo_big2.png" alt="Logo" style="float: left; padding-left:10%">
             </a>
 <!-- End Logo -->
@@ -168,7 +168,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                                 slideoutdirection : bottom;
                                                 durationin : 2000;
                                                 durationout : 2000; ">
-                        learn more</a>
+                        Learn More</a>
 
                               <a class="btn-u btn-u-black ls-s-1" data-toggle="modal" data-target="#mailchimpModal" href="#" style="
                                                 padding: 20px 40px;
@@ -179,7 +179,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                                 slideoutdirection : bottom;
                                                 durationin : 2000;
                                                 durationout : 2000; ">
-                        sign up for beta</a>
+                        Sign Up for Beta</a>
 
     <!-- YouTube/Vimeo video -->
     <div class="ls-l" data-ls="offsetxin: 400; offsetyin: 150;" style=" 
@@ -250,17 +250,17 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                         slideoutdirection : bottom;
                                         durationin : 2000;
                                         durationout : 2000; ">
-                sign up for beta</a>
+                Sign Up for Beta</a>
             <a class="btn-u btn-u-black ls-s-1" href="#devs" style=" 
                                         padding: 8px 18px; 
                                         font-size:18px;     
                                         top:440px; 
-                                        left: 350px; 
+                                        left:357px; 
                                         slidedirection : bottom; 
                                         slideoutdirection : bottom; 
                                         durationin : 2000; 
                                         durationout : 2000; ">
-                I'm a developer</a>
+                I'm a Developer</a>
 
 
 
