--- a/public/termsofuse.html
+++ b/public/termsofuse.html
@@ -70,7 +70,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
                              <!-- Logo -->
-<a class="logo" href="#">
+<a class="logo" href="index.html">
              <img id="brave-logo" src="assets/img/brave_logo_big2.png" alt="Logo" style="float: left; padding-left:120px">
             </a>
 <!-- End Logo -->
