Add LinkedIn profile for Serg
Auditors: @SergeyZhukovsky

--- a/public/index.html
+++ b/public/index.html
@@ -568,6 +568,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <ul>
                                 <li><a href="https://twitter.com/SergZh_" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
                                 <li><a href="https://github.com/SergeyZhukovsky/" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="https://ca.linkedin.com/in/sergey-zhukovsky-071137113" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
                             </ul>
                         </div>
                         <h3>Sergey Zhukovsky</h3>
