--- a/public/privacypolicy.html
+++ b/public/privacypolicy.html
@@ -407,10 +407,14 @@ Please also feel free to contact us if you have any questions about Brave’s Pr
     <script src="assets/js/plugins/layer-slider.js"></script>
     <script>
         function showSmallLogo() {
-            jQuery('#brave-logo').height(40)
+            if (jQuery(document.body).width() > 976) {
+                jQuery('#brave-logo').height(40)
+            }
         }
         function showOrigLogo() {
-            jQuery('#brave-logo').height(76)
+            if (jQuery(document.body).width() > 976) {
+                jQuery('#brave-logo').height(76)
+            }
         }
         jQuery(document).ready(function() {
             App.init();
