nav menu css fix

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="fullsize-menu" class="collapse navbar-collapse navbar-ex1-collapse">
                 <div class="menu-container">
-                    <ul class="nav navbar-nav" style="position:absolute; bottom:0px; right:40px">
+                    <ul class="nav navbar-nav brave-nav" style="">
                         <li class="home">
                             <a href="#body">Introducing Brave</a>
                         </li>
