--- a/public/index.html
+++ b/public/index.html
@@ -737,7 +737,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="col-md-8">
                         <p>
                            © 2016 Brave Software Inc. All Rights Reserved.
-                           <a href="privacypolicy.html">Privacy Policy</a> | <a href="termsofuse.html">Terms of Use</a>
+                           <a href="#" onclick="alert('coming soon')">Privacy Policy</a> | <a href="#" onclick="alert('coming soon')">Terms of Use</a>
                         </p>
                     </div>
 
