Pending Final Approval

--- a/public/index.html
+++ b/public/index.html
@@ -736,7 +736,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="col-md-8">
                         <p>
                            © 2016 Brave Software Inc. All Rights Reserved.
-                           <a href="#" onclick="alert('coming soon')">Privacy Policy</a> | <a href="#" onclick="alert('coming soon')">Terms of Use</a>
+                           <a href="#" onclick="alert('Pending Final Approval')">Privacy Policy</a> | <a href="#" onclick="alert('Pending Final Approval')">Terms of Use</a>
                         </p>
                     </div>
 
