--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-    <title>Brave Software | Terms of Use</title>
+    <title>Brave Software | FAQs</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
