--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,11 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <a href="#about">About</a>
 
                         </li>
+                        
+                             <li>
+                            <a href="FAQ.html">FAQs</a>
+
+                        </li>
 
                         <li>
                             <a href="#contact">Contact</a>
@@ -736,7 +741,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="col-md-8">
                         <p>
                            © 2016 Brave Software Inc. All Rights Reserved.
-                           <a href="#" onclick="alert('Pending Final Approval')">Privacy Policy</a> | <a href="#" onclick="alert('Pending Final Approval')">Terms of Use</a>
+                           <a href="#" onclick="alert('Pending Final Approval')">Privacy Policy</a> | <a href="#" onclick="alert('Pending Final Approval')">Terms of Use</a> | <a href="FAQ.html">FAQs</a>
                         </p>
                     </div>
 
