--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </li>
                         
                              <li>
-                            <a href="FAQ.html">FAQs</a>
+                            <a href="FAQ.html">FAQ</a>
 
                         </li>
 
@@ -741,7 +741,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="col-md-8">
                         <p>
                            © 2016 Brave Software Inc. All Rights Reserved.
-                           <a href="#" onclick="alert('Pending Final Approval')">Privacy Policy</a> | <a href="#" onclick="alert('Pending Final Approval')">Terms of Use</a> | <a href="FAQ.html">FAQs</a>
+                           <a href="#" onclick="alert('Pending Final Approval')">Privacy Policy</a> | <a href="#" onclick="alert('Pending Final Approval')">Terms of Use</a> | <a href="FAQ.html">FAQ</a>
                         </p>
                     </div>
 
