--- a/public/FAQ.html
+++ b/public/FAQ.html
@@ -102,7 +102,11 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <a href="index.html#about">About</a>
 
                         </li>
+                        <li>
+                            <a href="FAQ.html">FAQ</a>
 
+                        </li>
+                        
                         <li>
                             <a href="index.html#contact">Contact</a>
                         </li>
@@ -534,7 +538,7 @@ The Brave Vault can hold information that users would like to sync across device
                     <div class="col-md-8">
                         <p>
                            © 2016 Brave Software Inc. All Rights Reserved.
-                           <a href="">Privacy Policy</a> | <a href="">Terms of Use</a>
+                           <a href="#" onclick="alert('Pending Final Approval')">Privacy Policy</a> | <a href="#" onclick="alert('Pending Final Approval')">Terms of Use</a> | <a href="FAQ.html">FAQ</a>
                         </p>
                     </div>
 
