--- a/public/index.html
+++ b/public/index.html
@@ -873,6 +873,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             if (window.location.hash && window.location.hash !== '#body') {
                 showSmallLogo()
             }
+
+            // resize jotform iframe (not working on firefox)
+            document.getElementById('60195600795156').style.height = "150px";
         });
         window.onhashchange = function() {
             if (window.location.hash && window.location.hash !== '#body') {
