--- a/public/index.html
+++ b/public/index.html
@@ -727,7 +727,27 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 Twitter: <a href="https://twitter.com/brave" target="_blank">twitter.com/brave</a>
                             </address>
 
-                            <script type="text/javascript" src="https://form.jotform.com/jsform/60195600795156"></script>
+                            <iframe
+
+                              id="JotFormIFrame"
+
+                              onload="window.parent.scrollTo(0,0)"
+
+                              allowtransparency="true"
+
+                              src="https://form.jotform.com/60195600795156"
+
+                              frameborder="0"
+
+                              style="width:190px;
+
+                              height:150px;
+
+                              border:none;"
+
+                              scrolling="no">
+
+                            </iframe>
                         </div>
                     </section>
                               
@@ -873,10 +893,6 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             if (window.location.hash && window.location.hash !== '#body') {
                 showSmallLogo()
             }
-
-            // resize jotform iframe (not working on firefox)
-            document.getElementById('60195600795156').style.height = "150px";
-            
         });
         window.onhashchange = function() {
             if (window.location.hash && window.location.hash !== '#body') {
