adjust font weight for nav bar, add Founder to BE titles

--- a/public/index.html
+++ b/public/index.html
@@ -444,7 +444,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             </ul>
                         </div>
                         <h3>Brendan Eich</h3>
-                        <h4>President and CEO</h4>
+                        <h4>Founder, President and CEO</h4>
                         <p></p>
                     </li>
 
@@ -609,7 +609,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="news-v3-in-sm no-padding">
                     <ul class="list-inline posted-info">
                         <li>By Brendan Eich</li>
-                        <li>President and CEO</li>
+                        <li>Founder, President and CEO</li>
                         <li>Posted January 20, 2016</li>
                     </ul>
                     <h2><a href="#">How to Fix the Web</a></h2>
