--- a/public/index.html
+++ b/public/index.html
@@ -727,27 +727,24 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                 Twitter: <a href="https://twitter.com/brave" target="_blank">twitter.com/brave</a>
                             </address>
 
-                            <iframe
+                            
 
-                              id="JotFormIFrame"
+<!-- JotForm embedded version -->
+<form novalidate="true" class="jotform-form" action="https://submit.jotform.us/submit/60207375294153/" method="post" name="form_60207375294153" id="60207375294153" accept-charset="utf-8" target="_blank">
+  <input name="formID" value="60207375294153" type="hidden">
+          <input placeholder="your@email.address" class=" form-textbox validate[Email]" id="input_1" name="q1_input1" style="width: 180px" value="" type="email" required>
+            <button id="input_2" type="submit" class="btn-u btn-u-black ls-s-1" style="width: 180px;margin-top: 9px">
+              Stay In Touch
+            </button>
+  <input id="simple_spc" name="simple_spc" value="60207375294153-60207375294153" type="hidden">
+  <script type="text/javascript">
+  document.getElementById("si" + "mple" + "_spc").value = "60207375294153-60207375294153";
+  </script>
+<input value="1453425133660_60207375294153_f66GtFt" name="event_id" type="hidden"></form>
 
-                              onload="window.parent.scrollTo(0,0)"
 
-                              allowtransparency="true"
 
-                              src="https://form.jotform.com/60195600795156"
 
-                              frameborder="0"
-
-                              style="width:190px;
-
-                              height:150px;
-
-                              border:none;"
-
-                              scrolling="no">
-
-                            </iframe>
                         </div>
                     </section>
                               
